src/components/SelectTip/SelectTip.module.css
.container {
    margin-top: 32px;
    padding: 0;
}

.content {
    margin-top: 16px;
    padding: 0 33px 0 32px;
    display: grid;
    grid-template: 1fr 1fr 1fr / 146px 146px;
    row-gap: 16px;
    justify-content: space-between;
}

@media (min-width: 1024px) {
    .container {
        margin-top: 40px;
        padding: 0;
    }

    .content {
        grid-template: 1fr 1fr / repeat(3, 117px);
        column-gap: 14px;
        padding: 0;
    }
}

